# src/controllers/ProdutoController.js
@@ -46,7 +46,33 @@ class ProdutoController {
         } catch(err) {
             return res.status(400).json(err)
         }
-    }  
+    } 
+
+    async avaliacaoByIdProduto(req, res){
+        let {id_produto} = req.params;
+        let media, soma = parseFloat(0); 
+
+        try{
+            let produto = await Produto.findById(id_produto);
+
+            if(produto != undefined && produto.avaliacao.length > 0){
+                
+                let i = 0;
+                for(i; i < produto.avaliacao.length; i++){
+                    soma = soma + parseFloat(produto.avaliacao[i].nota);
+                }
+
+                media = soma/parseFloat(produto.avaliacao.length);
+
+                return res.status(200).json({media: media});
+            }
+            return res.status(404).json({Error: 'Produto não encontrado'});
+
+        }catch(err){
+            return res.status(400).json(err);
+        }
+    }
+
 }
 
 module.exports = new ProdutoController();
